[package]
name = "ckb-avoum"
version = "0.1.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.101.0" }
ckb-store = { path = "../store", version = "= 0.101.0" }
ckb-types = { path = "../util/types", version = "= 0.101.0" }

auction-utils = { path = "../../ckb-avoum-auction/auction-utils" }
rebase-auction = { path = "../../ckb-avoum-auction/rebase-auction" }
